2003-05-23  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc: move Exclude to after file type setting. This
	  fixes exclude/include of directories on local side.
	* commands.cc: new command `.tasks'.
	* complete.cc: don't show hidden commands in completion.
	* ftpclass.cc, ftpclass.h: fix borrowing not-logged-in connection.

2003-05-23  Diego Reyes <dreyes@bancofrances.com.ar>

	* ResMgr.cc: (DirReadable, FileReadable) fix a bug.

2003-05-14  Geoffrey Lee <glee@gnupilgrims.org>

	* Http.cc: fix a problem with empty path; change it to "/".

2003-04-30  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: default mode for directories is 0775; raise sane
	  connection limit to insane 64.

2003-04-28  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fix hftp file information retrieval when use-head is off
	  (bug reported by Robert A. Thompson <rob@doc.com>).

2003-04-15  AIDA Shinra <shinra@j10n.org>

	* HttpDir.cc: fix bug with unterminated string; add wwwoffle support.

2003-04-08  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixes for --script (bug reported by Olaf Kaehler
	  <kaehleof@iis.fhg.de>).

2003-03-14  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: use net:timeout when draining data socket on upload;
	  ignore 0 size reported by SIZE (for sunsolve.sun.com).

2003-02-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: close data connection when sending ABOR over ssl.
	* MirrorJob.cc: add --just-print and --dry-run options.
	* CmdExec.cc, FileGlob.cc, FileGlob.h, commands.cc, complete.cc, mgetJob.cc:
	  (GlobURL::NewGlob) new method; save some glob options and use this.
	* buffer.h: increase GET_BUFSIZE.

2003-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* OutputJob.cc: fixed large file support (should have used off_t).
	* HttpDir.cc: handle \r just in case.
	* CmdExec.cc: set slot's cwd even if non-interactive.

2003-02-14  Alexander V. Lukyanov <lav@yars.free.net>
